fixed overflow issue

--- a/src/app/components/form/form.component.css
+++ b/src/app/components/form/form.component.css
@@ -56,6 +56,7 @@ input[type=checkbox] + label:before {
 .remove-right-nav-accordion-transition {
     width: 0px;
     transition: all .3s ease-in-out;
+    overflow: hidden;
 }
 
 .nav-button-wrapper {
